--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "8.13.5",
-    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/drei": "^9.99.5",
+    "@react-three/fiber": "^8.15.16",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
-    "next": "14.2.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.2.28",
+    "react": "^18.2.0",
+    "react-dom": "^18",
     "react-hook-form": "^7.51.0",
-    "react-icons": "^5.5.0",
     "sharp": "^0.33.2",
     "sonner": "^1.4.3",
     "three": "^0.162.0"
